--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "sweva-visualization-bar-chart": "rwth-acis/sweva-visualization-bar-chart#^1.0.7",
     "sweva-visualization-graph": "rwth-acis/sweva-visualization-graph#^1.0.7",
     "sweva-visualization-line-graph": "rwth-acis/sweva-visualization-line-graph#^1.0.7",
-    "sweva-visualization-raw": "rwth-acis/sweva-visualization-raw#^1.0.7",
+    "sweva-visualization-raw": "rwth-acis/sweva-visualization-raw#sweva-update",
     "sweva-visualization-stacked-area-chart": "rwth-acis/sweva-visualization-stacked-area-chart#^1.0.7"
   },
   "devDependencies": {
