Added Line graph as a bower dependency

--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "/test/"
   ],
   "dependencies": {
-    "sweva-visualization-raw": "rwth-acis/sweva-visualization-raw#sweva-update"
+    "sweva-visualization-raw": "rwth-acis/sweva-visualization-raw#sweva-update",
+    "sweva-visualization-line-graph": "rwth-acis/sweva-visualization-line-graph#^sweva-update"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0",
