Added sweva-visualization graph to the bower dependencies

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "sweva-visualization-bar-chart": "rwth-acis/sweva-visualization-bar-chart#sweva-update",
     "sweva-visualization-raw": "rwth-acis/sweva-visualization-raw#sweva-update",
-    "sweva-visualization-line-graph": "rwth-acis/sweva-visualization-line-graph#sweva-update"
+    "sweva-visualization-line-graph": "rwth-acis/sweva-visualization-line-graph#sweva-update",
+    "sweva-visualization-graph": "rwth-acis/sweva-visualization-graph#^1.0.7"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0",
